BasicPlanGraph: preserve order